mod: get plugin config tpl by plugin id
Former-commit-id: d405127bf33fd0d3b32ace6dec2edc01ace691e0
